--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <title>Animated Netflix Logo in CSS</title>
 
     <!-- LIVE RELOAD -->
-    <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?<snipver></snipver>=1"></' + 'script>')</script>
+    <!-- <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?<snipver></snipver>=1"></' + 'script>')</script> -->
 
   </head>
 
@@ -69,6 +69,12 @@
       <button class="control-button" id="playPauseButton" onclick="togglePlayPause()">Pause</button>
       <button class="control-button active" id="fastSpeedButton" onclick="fastSpeed()">1x Speed</button>
       <button class="control-button" id="slowSpeedButton" onclick="slowSpeed()">0.5x Speed</button>
+    </div>
+
+    <div class="footer">
+      <span>By Charlie Wu</span>
+      <span><a href="https://github.com/mrchaarlie/Netflix-Logo" target="_blank">See the code on GitHub</a></span>
+      <span><a href="/">View my Site</a></span>
     </div>
 
     <script src="style.js"></script>
